<?xml version="1.0" encoding="utf-8"?>

<resources>

  <eat-comment/>

  <string name="app_name" translatable="false">RabbitMQ Management</string>

  <string name="shared_preferences_key" translatable="false">com.todev.rabbitmqmanagement.SHARED_PREFERENCES_KEY</string>

  <string name="shared_preferences_last_used_service" translatable="false">LAST_USED_SERVICE</string>
  <string name="shared_preferences_last_used_service_url" translatable="false">LAST_USED_SERVICE_URL</string>
  <string name="shared_preferences_last_used_service_port" translatable="false">LAST_USED_SERVICE_PORT</string>
  <string name="shared_preferences_last_used_login" translatable="false">LAST_USED_LOGIN</string>
  <string name="shared_preferences_last_used_password" translatable="false">LAST_USED_PASSWORD</string>
  <string name="shared_preferences_remember_credentials" translatable="false">REMEMBER_CREDENTIALS</string>

  <string name="content_description_rabbitmq_logo">RabbitMQ logo</string>
  <string name="content_description_fragment_add_service_search">Search for available services.</string>

  <string name="login">Login</string>
  <string name="password">Password</string>
  <string name="add">Add</string>
  <string name="find">Find</string>

  <string name="service_unreachable">The service is unreachable</string>

  <string name="activity_login_login_missing">Enter user login</string>
  <string name="activity_login_password_missing">Enter user password</string>
  <string name="activity_login_credentials_invalid">User credentials invalid</string>
  <string name="activity_login_remember">Remember configuration.</string>

  <string name="activity_overview_queued_messages_title">Queued Messages</string>
  <string name="activity_overview_no_data">No data provided yet.</string>
  <string name="activity_overview_button_ready">Ready: %d</string>
  <string name="activity_overview_button_unacked">Unacked: %d</string>
  <string name="activity_overview_button_total">Total: %d</string>

  <string name="fragment_add_service_dialog_title">Provide RabbitMQ service details</string>
  <string name="fragment_add_service_dialog_address">Address</string>
  <string name="fragment_add_service_dialog_label">Label</string>
  <string name="fragment_add_service_dialog_port">Select service port number:</string>
  <string name="fragment_add_service_dialog_label_incorrect">Incorrect or already used label</string>
  <string name="fragment_add_service_dialog_address_incorrect">Incorrect address</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
