<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:paddingEnd="@dimen/margin_large"
    android:paddingLeft="@dimen/margin_large"
    android:paddingRight="@dimen/margin_large"
    android:paddingStart="@dimen/margin_large"
    tools:context=".activities.LoginActivity"
    >

  <ImageView
      android:id="@+id/logo_image_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/margin_huge"
      android:contentDescription="@string/content_description_rabbitmq_logo"
      android:src="@drawable/logo"
      />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/login_edit_text_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/logo_image_view"
      android:layout_marginBottom="@dimen/margin_medium_plus"
      android:theme="@style/RabbitmqManagement.Widget.Colored.TextInputLayout"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/login_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:textColor="@color/colorPrimary"
        />

  </android.support.design.widget.TextInputLayout>

  <android.support.design.widget.TextInputLayout
      android:id="@+id/password_edit_text_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/login_edit_text_layout"
      android:layout_marginBottom="@dimen/margin_medium_plus"
      android:theme="@style/RabbitmqManagement.Widget.Colored.TextInputLayout"
      >

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        />

  </android.support.design.widget.TextInputLayout>

  <RelativeLayout
      android:id="@+id/services_relative_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/password_edit_text_layout"
      android:layout_marginBottom="@dimen/margin_medium"
      >

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/select_service_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/add_service_button"
        android:layout_toStartOf="@+id/add_service_button"
        android:theme="@style/RabbitmqManagement.Widget.Colored"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        />

    <Button
        android:id="@id/add_service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/add"
        android:theme="@style/RabbitmqManagement.Widget.Button"
        />

  </RelativeLayout>

  <android.support.v7.widget.AppCompatCheckBox
      android:id="@+id/remember_configuration_check_box"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/services_relative_layout"
      android:layout_marginBottom="@dimen/margin_medium"
      android:text="@string/activity_login_remember"
      android:textColor="@color/colorPrimaryDark"
      android:theme="@style/RabbitmqManagement.Widget.Colored"
      />

  <Button
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/remember_configuration_check_box"
      android:text="@string/login"
      android:theme="@style/RabbitmqManagement.Widget.Button"
      />

</RelativeLayout>
